--- a/cockfight.html
+++ b/cockfight.html
@@ -163,7 +163,7 @@
   <div class="line"></div>
   <section class="sec1">
     <div class="containerc">
-    <a href="#">
+    <a href="https://swc88.com/" target="_blank">
       <div class="cardc">
       <img class="bg" src="img/1.png" alt="SWC88">
       <div class="overlay">
@@ -173,9 +173,9 @@
     </div>
     </a>
 
-    <a href="#">
+    <a href="https://m99.one/login" target="_blank">
       <div class="cardc">
-      <img class="bg" src="img/2.png" alt="SWC88">
+      <img class="bg" src="img/2.png" alt="m99">
       <div class="overlay">
         <img class="logo" src="img/cock2.jpg" alt="SWC88 Logo" style="border-radius: 20px;">
         <button class="btn">Bet Now</button>
@@ -183,9 +183,9 @@
     </div>
     </a>
 
-    <a href="#">
+    <a href="https://sb24h.com/login" target="_blank">
       <div class="cardc">
-      <img class="bg" src="img/3.png" alt="SWC88">
+      <img class="bg" src="img/3.png" alt="sb24">
       <div class="overlay">
         <img class="logo" src="img/cock3.png" alt="SWC88 Logo" style="border-radius: 20px;">
         <button class="btn">Bet Now</button>
@@ -193,19 +193,6 @@
     </div>
     </a>
 
-    <a href="#">
-      <div class="cardc">
-      <img class="bg" src="img/1.png" alt="SWC88">
-      <div class="overlay">
-        <img class="logo" src="img/cock4.png" alt="SWC88 Logo" style="border-radius: 20px;">
-        <button class="btn">Bet Now</button>
-      </div>
-    </div>
-    </a>
-
-    
-
-    
   </section>
   
 
